[tool.poetry]
name = "play_with_statink"
version = "0.1.0"
description = ""
authors = ["Toru Sumi <prayonshootingstars@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "*"
plotly = "*"
tqdm = "*"
# requests = "*"
flake8 = "*"
jupyterlab = "*"
jupyter = "*"
missingno = "*"
ipywidgets = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
