[tool.poetry]
name = "play_with_statink"
version = "0.1.0"
description = ""
authors = ["Toru Sumi <prayonshootingstars@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "*"
plotly = "*"
tqdm = "*"
# requests = "*"
flake8 = "*"
jupyterlab = "*"
jupyter = "*"
missingno = "*"
ipywidgets = "*"
kaleido = "0.2.1"
japanize_matplotlib = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
streamlit = "*"
altair = "<5.0.0"
ipykernel = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
